<resources>
    <string name="app_name">NFC Business Cards</string>

    <!-- SIGN IN/ SIGN UP -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="continue_btn">Continue</string>

    <!-- PROFILE -->
    <string name="full_name">Full name</string>
    <string name="job_title">Job title</string>
    <string name="your_information">Your information:</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="delete">Delete</string>
    <string name="profile">profile</string>
    <string name="edit">Edit</string>
    <string name="your_at_a_glance_business_card">Your at a glance business card: (only images)</string>
    <string name="your_more_detaileed_business_card">Your more detailed Business card: (only youtube videos)</string>
    <string name="save">Save</string>
    <string name="at_a_glance_card">Https://at_a_glance_card.com</string>
    <string name="detailed_card">Https://detailed_card.com</string>

    <!-- HOME -->
    <string name="search">search</string>
    <string name="search_cards">Search cards</string>
    <string-array name="spinner_values">
        <item>Sort by name</item>
        <item>Sort by job title</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
