<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lyantorres.torreslyan_pp6.fragments.EditProfileFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_information"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="99dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/edit_name_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/job_title"
                android:inputType="text" />

            <ImageView
                android:id="@+id/edit_jt_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <ImageView
                android:id="@+id/edit_pn_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>

        <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/edit_email_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>

        <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_small_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/at_a_glance_card"
                android:inputType="text" />

            <ImageView
                android:id="@+id/edit_small_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_large_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/detailed_card"
                android:inputType="text" />

            <ImageView
                android:id="@+id/edit_large_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="70dp"
                android:src="@drawable/ic_clear_red_24dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
