<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lyantorres.torreslyan_pp6.fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="135dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sign_up_email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>

            <ImageView
                android:id="@+id/sign_up_email_feedback_IV"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_clear_red_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="145dp"
                android:layout_marginRight="70dp"
                android:visibility="invisible"/>

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sign_up_password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/sign_up_password_feedback_IV"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_clear_red_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="145dp"
            android:layout_marginRight="70dp"
            android:visibility="invisible"/>

    </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/sign_up_sign_up_BTN"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/sign_up_btn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
